
	- add ecb.h.

1.6  Sat Jan 21 16:59:22 CET 2012
	- fix compilation on solaris.
	- remove dependency on STL.

1.5  Thu Dec 22 23:32:08 CET 2011
	- INCOMPATIBLE CHANGE: ptytty::get no longer sets the pty fd
	  non-blocking.
	- the login_shell argument of ptytty::login is now properly
	  honoured.
	- ptytty::get no longer makes the pty a controlling terminal
	  when using posix_openpt.
	- remove support for utmpx ut_session extension, it serves no
	  purpose.
	- remove support for writing lastlog when the lastlog file is a
	  directory, no system is known to require this code.
	- do not clear ut_user in utmpx logout records because
	  pututxline fails otherwise on solaris.
	- fix writing of bsd style utmp when the tty is closed before
	  calling ptytty::login.
	- fix compilation on systems with bsd style utmp and no utmpx,
	  such as openbsd.

1.4  Wed Jun 29 14:36:19 CEST 2011
	- push stream modules in ptytty::get rather than in
	  ptytty::make_controlling_tty. This makes tty ioctls (such as
	  TIOCSWINSZ, to set the window size) work even if
	  make_controlling_tty has not been called.
	- clear user and host fields in utmp(x) logout records.
	- fix utmpx detection on upcoming FreeBSD 9.
	- switch to automake.
	- refactoring and cleanup.

1.3  Sun May  3 23:44:16 CEST 2009
	- fedora 9 apparently has isastream but not the stropts.h header
          file for it, work around this (reported by Tuncer Ayaz).
        - detect if lastlog is a directory at runtime.
        - assume ttyslot availability for bsd style utmp.
        - make sure the alignment for fd passing control messages
          is correct and work around some NetBSD issues (Taylor R Campbell).
        - add some missing include statements.

1.2  Thu Aug  2 15:50:02 CEST 2007
        - restore the SysV way of acquiring a controlling terminal
          (for systems having no TIOCSCTTY such as cygwin or solaris).
        - when using openpty, get the slave name with ttyname.